--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,8 @@
-<p>top-bar works!!!!</p>
+<header>
+    <a>
+        <h1>My Store</h1>
+    </a>
+
+    <button class="btn btn-primary fancy-button"><i class="material-icons">shopping_cart</i>Checkout</button>
+</header>
+
