--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,14 @@
-<header>
-    <a>
-        <h1>My Store</h1>
-    </a>
+<div class="container-fluid head-wrap">
+    <div class="row">
+        <div class="col-xs-12">
+            <header>
+                <a>
+                    <h1>My Store</h1>
+                </a>
 
-    <button class="btn btn-primary fancy-button"><i class="material-icons">shopping_cart</i>Checkout</button>
-</header>
+                <button class="btn btn-primary fancy-button"><i class="material-icons">shopping_cart</i>Checkout</button>
+            </header>
+        </div>
+    </div>
+</div>
 
