--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,12 +1,25 @@
-<h2>Products</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h2>Products</h2>
 
-<div *ngFor="let product of products">
-    <h3>
-        <a [title]="product.name + ' details'">
-            {{ product.name }}
-        </a>
-    </h3>
-    <p *ngIf="product.description">
-        Description: {{ product.description }}
-    </p>
+            <div *ngFor="let product of products">
+                <h3>
+                    <a [title]="product.name + ' details'">
+                        {{ product.name }}
+                    </a>
+                </h3>
+                <p *ngIf="product.description">
+                    Description: {{ product.description }}
+                </p>
+                <button class="btn btn-info" (click)="share()">
+                    Share
+                </button>
+                <app-product-alerts
+                        [product]="product"
+                        (notify)="onNotify()">
+                </app-product-alerts>
+            </div>
+        </div>
+    </div>
 </div>
