--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -3,9 +3,9 @@
         <div class="col-xs-12">
             <h2>Products</h2>
 
-            <div *ngFor="let product of products">
+            <div *ngFor="let product of products; index as productId">
                 <h3>
-                    <a [title]="product.name + ' details'">
+                    <a [title]="product.name + ' details'" [routerLink]="['/products', productId]">
                         {{ product.name }}
                     </a>
                 </h3>
